--- a/project/maeng.ipynb
+++ b/project/maeng.ipynb
@@ -41,7 +41,7 @@
     "        freq_data = tf.signal.rfft(inputs)\n",
     "        freq_data = tf.concat([tf.math.real(freq_data), tf.math.imag(freq_data)], axis=-1)  # 수정됨\n",
     "        freq_data = freq_data[:, :, :self.num_harmonics]\n",
-    "        return self.dense(freq_data)  # 출력 크기를 d_model로 변환\n",
+    "        return self.dense(freq_data)  # 출력 크기를 d_model로 변환김건오\n",
     "\n",
     "class TimeSeriesBlock(Model):\n",
     "    def __init__(self, d_model, num_harmonics):\n",
