--- a/project/neuralForecast.ipynb
+++ b/project/neuralForecast.ipynb
@@ -2,39 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\big18\\dl-dev\\dl-dev\\project\\mylib.py:27: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[['날짜','시간']] = data[['날짜', '시간']].astype(str)\n",
-      "c:\\big18\\dl-dev\\dl-dev\\project\\mylib.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['date'] = data['날짜'].astype(str) + data['시간'].astype(str)\n",
-      "c:\\big18\\dl-dev\\dl-dev\\project\\mylib.py:29: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['시간'] = data['시간'].str.zfill(4)\n",
-      "c:\\big18\\dl-dev\\dl-dev\\project\\mylib.py:30: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['date'] = pd.to_datetime(data['date'], format='%Y%m%d%H%M')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -56,8 +26,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>close</th>\n",
-       "      <th>date</th>\n",
+       "      <th>SP500</th>\n",
+       "      <th>ds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -122,7 +92,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        close                date\n",
+       "        SP500                  ds\n",
        "0       90000 2022-09-20 09:11:00\n",
        "1       90200 2022-09-20 09:12:00\n",
        "2       90300 2022-09-20 09:13:00\n",
@@ -138,7 +108,7 @@
        "[17390 rows x 2 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,14 +118,21 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import preprocessing\n",
-    "from neuralforecast.core import NeuralForecast\n",
-    "from neuralforecast.models import TimesNet\n",
+    "# from neuralforecast.core import NeuralForecast\n",
+    "# from neuralforecast.models import TimesNet\n",
     "import mylib as ml\n",
     "\n",
-    "# 파일 경로 설정 (로컬 경로로 수정)\n",
     "data = pd.read_csv('./000660.csv')\n",
-    "data = ml.dataRename2(data)\n",
-    "data"
+    "data=data[['날짜','시간','종가']]\n",
+    "data[['날짜','시간']] = data[['날짜', '시간']].astype(str)\n",
+    "data['date'] = data['날짜'].astype(str) + data['시간'].astype(str)\n",
+    "data['시간'] = data['시간'].str.zfill(4)\n",
+    "data['date'] = pd.to_datetime(data['date'], format='%Y%m%d%H%M')\n",
+    "data = data.drop(['날짜'],axis=1)\n",
+    "data = data.drop(['시간'],axis=1)\n",
+    "data.rename(columns={'종가':'SP500','date':'ds'}, inplace=True)\n",
+    "nov_dir = data\n",
+    "nov_dir"
    ]
   },
   {
@@ -389,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
